--- a/style/style.css
+++ b/style/style.css
@@ -28,9 +28,6 @@ margin: 0;
 
 /* is mobile */
 .is-mobile {
-    display: flex;
-}
-.is-not-mobile {
     display: none;
 }
 
@@ -166,12 +163,12 @@ margin: 0;
 }
 
 .menu--filter-buttons .menu__menu-item {
-    min-height: 30px;
     border-radius: 3px;
-    /* line-height: 30px; */
     border: 1px solid #e2e2e2;
     display: flex;
     text-align: center;
+    box-sizing: border-box;
+    height: 30px;
 }
 .menu--filter-buttons .menu__menu-button{
     padding-left: 10px;
