--- a/style/style.css
+++ b/style/style.css
@@ -458,6 +458,7 @@ margin: 0;
 
 .app-title--small .app-title__text{
     font-size: 22px;
+    white-space: nowrap;
 }
 
 .app-title--small .app-title__logo {
